--- a/snippets/_config.yml
+++ b/snippets/_config.yml
@@ -19,15 +19,15 @@ categories:
     - United States
     - 美
     - 🇺🇸
-  CN:
-    - CN
-    - China
-    - 中国
-    - 上海
-    - 浙江
-    - 广东
-    - 深圳
-    - 🇨🇳
+  # CN:
+  #   - CN
+  #   - China
+  #   - 中国
+  #   - 上海
+  #   - 浙江
+  #   - 广东
+  #   - 深圳
+  #   - 🇨🇳
   HK:
     - HK
     - Hong Kong
